# tada

./: .gitignore  CMakeLists.txt  README.md  TODO.md  example.cpp  tada.hpp
example/: example.cpp  example.cu  interval_example.cu
examples/: example.cpp
include/: tada.hpp
test/: arithmetic.cpp  creation.cpp  derivative.cpp
tests/: config.hpp  test_arithmetic.cpp  test_creation.cpp  test_derivative.cpp  test_functions.cpp
